--- a/Blitz/Blitz.csproj
+++ b/Blitz/Blitz.csproj
@@ -7,8 +7,6 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Blitz</RootNamespace>
     <AssemblyName>Blitz</AssemblyName>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -20,22 +18,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local Server|AnyCPU' ">
     <Optimize>false</Optimize>
     <OutputPath>..\..\..\..\Virtualbox Shared Folder</OutputPath>
     <WarningLevel>4</WarningLevel>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,10 +45,31 @@
     <Reference Include="UnityEngine">
       <HintPath>..\..\Rocket Builds\Latest\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Blitz.cs" />
+    <Compile Include="BlitzConfiguration.cs" />
+    <Compile Include="ERank.cs" />
+    <Compile Include="Team.cs" />
+    <Compile Include="PlayerData.cs" />
+    <Compile Include="Spawn.cs" />
+    <Compile Include="Unit.cs" />
+    <Compile Include="UnitItem.cs" />
+    <Compile Include="Listeners\PlayerConnectListener.cs" />
+    <Compile Include="Listeners\PlayerDeathListener.cs" />
+    <Compile Include="Listeners\PlayerReviveListener.cs" />
+    <Compile Include="Managers\SpawnManager.cs" />
+    <Compile Include="Commands\CommandBombard.cs" />
+    <Compile Include="Commands\CommandUnit.cs" />
+    <Compile Include="Commands\CommandAddSpawn.cs" />
+    <Compile Include="Commands\CommandAddUnit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Listeners\" />
+    <Folder Include="Managers\" />
+  </ItemGroup>
 </Project>
