--- a/Blitz/Blitz.csproj
+++ b/Blitz/Blitz.csproj
@@ -69,6 +69,11 @@
     <Compile Include="Commands\CommandAddSpawn.cs" />
     <Compile Include="Commands\CommandAddUnit.cs" />
     <Compile Include="Commands\CommandRemoveUnit.cs" />
+    <Compile Include="Managers\MatchManager.cs" />
+    <Compile Include="Countdown.cs" />
+    <Compile Include="Lobby.cs" />
+    <Compile Include="Commands\CommandSetLobby.cs" />
+    <Compile Include="Commands\CommandStartMatch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
