Configuration has multiple matches

--- a/Blitz/Blitz.csproj
+++ b/Blitz/Blitz.csproj
@@ -75,6 +75,11 @@
     <Compile Include="Commands\CommandSetLobby.cs" />
     <Compile Include="Commands\CommandStartMatch.cs" />
     <Compile Include="Commands\CommandGetLocation.cs" />
+    <Compile Include="Match.cs" />
+    <Compile Include="Objective.cs" />
+    <Compile Include="EObjectiveType.cs" />
+    <Compile Include="CapturePoint.cs" />
+    <Compile Include="Region.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
